Fix Pages 404 and clean Richi HTML

--- a/Richi/Richi.html
+++ b/Richi/Richi.html
@@ -1,23 +1,24 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"> // Validar contraseña con JavaScript
-  <title>Validar contraseña</title> 
+  <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="data:,">
+  <title>Validar contraseña</title>
 </head>
-<body style="font-family:Arial;max-width:360px;margin:40px auto"> 
+<body style="font-family:Arial;max-width:360px;margin:40px auto">
   <h3>Validar contraseña</h3>
-  <input id="pass" type="password" placeholder="Tu contraseña" style="width:100%;padding:8px">// Campo de contraseña
-  <button id="btn" style="margin-top:8px">Validar</button> // Botón para validar
+  <input id="pass" type="password" placeholder="Tu contraseña" style="width:100%;padding:8px">
+  <button id="btn" style="margin-top:8px">Validar</button>
   <p id="msg"></p>
   <script>
-    const pass = document.getElementById('pass'), msg = document.getElementById('msg'); // Obtener los elementos del DOM
-    const error = p => !p ? 'Obligatoria' : p.length < 8 ? 'Mínimo 8 caracteres' : !/[A-Z]/.test(p) ? 'Falta mayúscula' : !/\d/.test(p) ? 'Falta número' : ''; // Función de validación
+    const pass = document.getElementById('pass'), msg = document.getElementById('msg');
+    const error = p => !p ? 'Obligatoria' : p.length < 8 ? 'Mínimo 8 caracteres' : !/[A-Z]/.test(p) ? 'Falta mayúscula' : !/\d/.test(p) ? 'Falta número' : '';
     document.getElementById('btn').onclick = () => {
       try {
         const e = error(pass.value.trim());
-        msg.textContent = e || 'Contraseña válida ✅'; // Mostrar mensaje de error o éxito
-        msg.style.color = e ? 'red' : 'green'; // Cambiar color del mensaje
-      } catch { msg.textContent = 'Error al validar'; msg.style.color = 'red'; } // Manejo de errores en la validación
+        msg.textContent = e || 'Contraseña válida ✅';
+        msg.style.color = e ? 'red' : 'green';
+      } catch { msg.textContent = 'Error al validar'; msg.style.color = 'red'; }
     };
   </script>
 </body>
